<resources>
    <string name="app_name">Finances</string>
    <string name="add_expenditure_button">Añadir gasto</string>
    <string name="add_entry_button">Añadir ingreso</string>
    <string name="view_expenditures_button">Ver gastos</string>
    <string name="view_entries_button">Ver Ingresos</string>
    <string name="stadistics_button">Estadisticas</string>
    <string name="amount_input">Monto</string>
    <string name="description_input">Descripción</string>
    <string name="add_button">Añadir</string>
    <string name="total_button">Monto total</string>
    <string name="expended_button">Monto gastado</string>
    <string name="remaining_button">Monto restante</string>
    <string name="retirement_button">Monto de pensión</string>
    <string name="emergencies_button">Monto de emergencias</string>
    <string name="whims_button">Monto de caprichos</string>
    <string name="entries_graphic_button">Gráfico de ingresos</string>
    <string name="expenditures_graphic_button">Gráfico de gastos</string>
    <string name="dollars_button">Dolares: </string>
    <string name="colones_button">Colones: </string>
    <string name="dollars">Dolares</string>
    <string name="colones">Colones</string>
    <string name="backup_option">Backup</string>
    <string name="restore_option">Restore</string>
    <string name="filter_by_name">Fitrar por nombre</string>
    <string name="filter">Filtrar</string>
    <string name="cancel">Cancelar</string>
    <string name="change_chart">Cambiar tipo de gráfico</string>
    <string name="charts">Gráficos</string>
    <string name="pie_chart">Pie</string>
    <string name="line_chart">Line</string>
    <string name="id">ID </string>
    <string name="currency">Moneda </string>
    <string name="date">Fecha </string>
    <string name="save">Guardar </string>
    <string name="go_to_begin">&lt;&lt;</string>
    <string name="previous">&lt;</string>
    <string name="next">&gt;</string>
    <string name="go_to_end">&gt;&gt;</string>
</resources>
