<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="46dp"
        android:onClick="goToAddEntry"
        android:text="@string/add_entry_button" />

    <Button
        android:id="@+id/stadistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewExpenditure"
        android:layout_alignParentStart="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="15dp"
        android:onClick="goToStadistics"
        android:text="@string/stadistics_button" />

    <Button
        android:id="@+id/viewExpenditure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addExpenditure"
        android:layout_alignParentStart="true"
        android:layout_marginStart="124dp"
        android:layout_marginTop="13dp"
        android:onClick="goToExpenditureView"
        android:text="@string/view_expenditures_button" />

    <Button
        android:id="@+id/addExpenditure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addEntry"
        android:layout_alignParentStart="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="17dp"
        android:onClick="goToAddExpenditure"
        android:text="@string/add_expenditure_button" />

</RelativeLayout>