<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.Stadistics">

    <Button
        android:id="@+id/remainingAmountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expendedAmountButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/button_background"
        android:onClick="goToRemainingView"
        android:text="@string/remaining_button"
        android:textColor="#87868B" />

    <Button
        android:id="@+id/expenditureChartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EntriesChartsButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/button_background"
        android:onClick="goToExpendituresChart"
        android:text="@string/expenditures_graphic_button"
        android:textColor="#87868B" />

    <Button
        android:id="@+id/totalAmountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/button_background"
        android:onClick="goToAmountView"
        android:text="@string/total_button"
        android:textColor="#87868B" />

    <Button
        android:id="@+id/retairedmentAmountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remainingAmountButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/button_background"
        android:onClick="goToRetirementView"
        android:text="@string/retirement_button"
        android:textColor="#87868B" />

    <Button
        android:id="@+id/emergencyAmountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/retairedmentAmountButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/button_background"
        android:onClick="goToEmegenciesView"
        android:text="@string/emergencies_button"
        android:textColor="#87868B" />

    <Button
        android:id="@+id/whimsAmountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emergencyAmountButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/button_background"
        android:onClick="goToWhimsView"
        android:text="@string/whims_button"
        android:textColor="#87868B" />

    <Button
        android:id="@+id/EntriesChartsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whimsAmountButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/button_background"
        android:onClick="goToEntriesChart"
        android:text="@string/entries_graphic_button"
        android:textColor="#87868B" />

    <Button
        android:id="@+id/expendedAmountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalAmountButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/button_background"
        android:onClick="goToExpendedView"
        android:text="@string/expended_button"
        android:textColor="#87868B" />

</RelativeLayout>