<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/idTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:editable="false"
                android:ems="10"
                android:inputType="none"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_input"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/amountTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_input"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/descriptionTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioGroup
                android:id="@+id/currenciesRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/colonesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/colones"
                    android:textColor="#FFFFFF"
                    android:theme="@style/RadioButtonStyle" />

                <RadioButton
                    android:id="@+id/dollarsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dollars"
                    android:textColor="#FFFFFF"
                    android:theme="@style/RadioButtonStyle" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/dateTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:editable="false"
                android:ems="10"
                android:inputType="none"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:background="@drawable/button_background"
                android:onClick="saveData"
                android:text="@string/save"
                android:textColor="#C7C5CF"
                android:textColorHint="#4B4F58"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>